[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llava-eval"
version = "1.0.0"
description = "Comprehensive evaluation framework for vision-language models on the Winoground benchmark"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Research Team"},
]
keywords = ["vision-language", "multimodal", "evaluation", "benchmarking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.35.0",
    "Pillow>=9.0.0",
    "numpy>=1.24.0",
    "datasets>=2.14.0",
    "tqdm>=4.65.0",
    "spacy>=3.7.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "pytest>=7.0",
]

[project.urls]
"Homepage" = "https://github.com/user/llava_eval"
"Documentation" = "https://github.com/user/llava_eval#usage"
"Repository" = "https://github.com/user/llava_eval.git"
"Issues" = "https://github.com/user/llava_eval/issues"

[tool.setuptools]
packages = []

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.9"
disallow_untyped_defs = false
check_untyped_defs = true
